--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <base target="_top">
     <title>RA Duty Generator</title>
-    <link href="https://fonts.googleapis.com/css?family=Rokkitt|Ubuntu" rel="stylesheet"> 
     <style>
     html {
       -webkit-box-sizing: border-box;
@@ -16,7 +15,7 @@
       background-color: #3498db;
       color: #363638;
       text-align: center;
-      font-family: 'Ubuntu', sans-serif;
+      font-family: sans-serif;
     }
 
     main {
@@ -31,7 +30,6 @@
     h1 {
       font-size: 1.5em;
       margin: 0;
-      font-family: 'Rokkitt';
     }
 
     .header {
@@ -96,7 +94,7 @@
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
       padding: 5px 7px;
-      font-family: 'Ubuntu', sans-serif;
+      font-family: sans-serif;
     }
 
     textarea { resize: vertical; }
